force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__ContentDistributionId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ContentDistributionId__c</fullName>
    <label>ContentDistribution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>