force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ContentDocumentId__c</fullName>
    <label>ContentDocument Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>