force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ContentVersionId__c</fullName>
    <label>ContentVersion Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>