force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__DeliveryScheduleExecNo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryScheduleExecNo__c</fullName>
    <label>実行回</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>