force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmDownloadAllow__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmDownloadAllow__c</fullName>
    <label>Fleekdirve 共有リンクダウンロード許可</label>
    <length>32</length>
    <type>Text</type>
</CustomField>