force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmDownloadLimit__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmDownloadLimit__c</fullName>
    <label>Fleekdrive 配信ダウンロード回数制限</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>