force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmDownloadPassword__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmDownloadPassword__c</fullName>
    <label>Fleekdrive 配信パスワード</label>
    <length>64</length>
    <type>Text</type>
</CustomField>