force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmDownloadPasswordAutoLength__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmDownloadPasswordAutoLength__c</fullName>
    <label>Fleekdrive 配信パスワード自動生成桁数</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>