force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmPublicLinkId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmPublicLinkId__c</fullName>
    <label>Fleekdrive 共有リンクID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>