force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmSpaceId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmSpaceId__c</fullName>
    <label>Fleekdrive 保存スペースID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>