force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__EcmSpacePath__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EcmSpacePath__c</fullName>
    <label>Fleekdrive 保存スペースパス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>