force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__ErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ErrorDetail__c</fullName>
    <label>エラー詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>