force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__ExecCount__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecCount__c</fullName>
    <label>配信実行回数</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>