force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__ExecDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecDate__c</fullName>
    <label>実行日時</label>
    <length>32</length>
    <type>Text</type>
</CustomField>