force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailFromDisplayAddress__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailFromDisplayAddress__c</fullName>
    <label>送信元アドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>