force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailPasswordBody__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailPasswordBody__c</fullName>
    <description>パスワード通知メール本文</description>
    <label>パスワード通知メール本文</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>