force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailPasswordCc__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailPasswordCc__c</fullName>
    <label>パスワード通知メール送信先(Cc)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>