force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailPasswordType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailPasswordType__c</fullName>
    <label>パスワード通知種別</label>
    <length>32</length>
    <type>Text</type>
</CustomField>