force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailUrlSubject__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailUrlSubject__c</fullName>
    <label>ダウンロード通知メール件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>