force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__OperationUserId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OperationUserId__c</fullName>
    <label>操作ユーザID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>