force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__RetryLastErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RetryLastErrorDetail__c</fullName>
    <label>再実行時前回エラー詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>