force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__RetryLastStatus__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RetryLastStatus__c</fullName>
    <label>再実行時前回ステータス</label>
    <length>16</length>
    <type>Text</type>
</CustomField>