force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__SaveFileType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveFileType__c</fullName>
    <label>保存ファイル種別</label>
    <length>32</length>
    <type>Text</type>
</CustomField>