force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__SaveLocation__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveLocation__c</fullName>
    <label>保存先</label>
    <length>64</length>
    <type>Text</type>
</CustomField>