force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__SaveObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveObjectLabel__c</fullName>
    <label>保存先オブジェクト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>