force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__SelectRecordName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SelectRecordName__c</fullName>
    <label>選択レコード名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>