force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__Status__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Status__c</fullName>
    <label>実行ステータス</label>
    <length>16</length>
    <type>Text</type>
</CustomField>