force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__WrProcStatusId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__WrProcStatusId__c</fullName>
    <label>Fleekform プロセスID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>